# squads-cpi

./: Anchor.toml  README.md  package.json  tsconfig.json
programs/sqds-cpi/: Cargo.toml
programs/sqds-cpi/src/: errors.rs  lib.rs  macros.rs  state.rs
programs/sqds-cpi/src/instructions/: deposit.rs  initialize.rs  mod.rs
tests/: sqds-multi-cpi.ts
